<resources>
    <string name="app_name">HC-05 Connect</string>
    <string name="action_on">Turn Bluetooth ON</string>
    <string name="action_off">Turn Bluetooth OFF</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About HC-05 Connect</string>
    <string name="ScanButton">SCAN</string>
    <string name="scanRefresh">Refresh</string>
    <string name="scanning">Scanning</string>
    <string name="action_recentDevice">Recently Connected</string>
</resources>
